# ai_api_compliance_protection

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross  INSTALL.md  PROJECT_STRUCTURE.md  README.md  RELEASE.md  build-all-platforms.sh  build-docker.sh  build-macos-from-github.sh  build.sh  docker-compose.yml  filter.example.yaml  package-release.sh  test.sh  upload-release.sh
.github/workflows/: build-macos-simple.yml  build-macos.yml  release.yml
config/: default_rules.yaml
examples/: nodejs_example.js  python_example.py
src/: config.rs  filter.rs  main.rs
