[package]
name = "ai-content-filter"
version = "1.0.0"
edition = "2021"
authors = ["AI Content Filter"]
description = "A lightweight offline content filter for AI/LLM outputs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
aho-corasick = "1.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler